[gd_scene load_steps=11 format=3 uid="uid://dumhb4ml5d0xs"]

[ext_resource type="Script" path="res://game/player/player_a.gd" id="1_c2idn"]
[ext_resource type="PackedScene" uid="uid://b82wikhj4obx" path="res://game/player/comp/default_shot.tscn" id="2_10p2x"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_qon3m"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="4_stabb"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="5_7rq4s"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="6_1smkh"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_6r2er"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m31uk"]
radius = 23.0

[sub_resource type="Gradient" id="Gradient_140ka"]
offsets = PackedFloat32Array(0.435065, 0.538961)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_52twh"]
gradient = SubResource("Gradient_140ka")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="PlayerA" type="CharacterBody2D" groups=["player"]]
collision_mask = 304
script = ExtResource("1_c2idn")
bullet_scene = ExtResource("2_10p2x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_m31uk")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.0588235, 0.470588, 1, 1)
texture = SubResource("GradientTexture2D_52twh")

[node name="FireTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_qon3m")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("4_stabb")

[node name="Life" type="Node" parent="StateChart/Root"]
script = ExtResource("5_7rq4s")
initial_state = NodePath("Alive")

[node name="Alive" type="Node" parent="StateChart/Root/Life"]
script = ExtResource("6_1smkh")

[node name="Transition" type="Node" parent="StateChart/Root/Life/Alive"]
script = ExtResource("7_6r2er")
to = NodePath("../../Dead/Sploding")
event = &"was_hit"
delay_in_seconds = "0.0"

[node name="Dead" type="Node" parent="StateChart/Root/Life"]
script = ExtResource("5_7rq4s")
initial_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="StateChart/Root/Life/Dead"]
script = ExtResource("6_1smkh")

[node name="ToAlive" type="Node" parent="StateChart/Root/Life/Dead/Spawn"]
script = ExtResource("7_6r2er")
to = NodePath("../../../Alive")
event = &"revive"
delay_in_seconds = "0.0"

[node name="Sploding" type="Node" parent="StateChart/Root/Life/Dead"]
script = ExtResource("6_1smkh")

[node name="ToLimbo" type="Node" parent="StateChart/Root/Life/Dead/Sploding"]
script = ExtResource("7_6r2er")
to = NodePath("../../Limbo")
delay_in_seconds = "1.0"

[node name="Limbo" type="Node" parent="StateChart/Root/Life/Dead"]
script = ExtResource("6_1smkh")

[node name="ToSpawn" type="Node" parent="StateChart/Root/Life/Dead/Limbo"]
script = ExtResource("7_6r2er")
to = NodePath("../../Spawn")
event = &"spawn"
delay_in_seconds = "0.0"

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="state_entered" from="StateChart/Root/Life/Alive" to="." method="_on_alive_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Life/Alive" to="." method="_on_alive_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Life/Dead/Spawn" to="." method="_on_spawn_state_entered"]
